---------------------------------------------------------------------------------------------------
Version: 1.5.5
Date: ???
  Changes:
    - New thumbnail
  Compatibility:
    - Players can no longer quick-toggle to enter a spidertron whilst jetpack is active
  Bugfixes:
    - Fixed 'Shift + Q' (Spidertron remote pipette) causing crash when in god mode
---------------------------------------------------------------------------------------------------
Version: 1.5.4
Date: 7 May 2021
  Compatibility:
    - Fix crash in Spidertron Patrols v2.1.0
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 7 May 2021
  Changes:
    - 'Shift + Q' (Spidertron remote pipette) will now clear cursor instead of picking a remote if the player is already holding an item
  Compatibility:
    - Added on_player_disconnected_spider_remote event to remote interface for better compatibility with Spidertron Patrols
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 4 May 2021
  Bugfixes:
    - Fixed crash when quick-toggling spidertron whilst Spidertron Patrols is installed
    - Fixed spidertron remotes not keeping their connections when the spidertron mounts another vehicle
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 2 May 2021
  Bugfixes:
    - Fixed crash when starting new game
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2 May 2021
  Features:
    - Added 'Shift + Right-click' to disconnect currently held remote
    - Spidertron inventories will never be forcibly closed, no matter how far away the spidertron becomes from the player