@@ -16,18 +16,23 @@ spidertron-enhancements-open-vehicle-inventory=If holding a spidertron remote, o
 spidertron-enhancements-recall-shortcut=Call last used spidertron
 
 [mod-setting-name]
+spidertron-enhancements-enable-corpse=Save spidertron inventory into corpse upon death
+spidertron-enhancements-sound-pause=Spidertron sound average pause [img=info]
+spidertron-enhancements-volume-scale=Spidertron sound volume scale [img=info]
+
 spidertron-enhancements-enter-entity=Enter/exit vehicles from spidertron with __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ or __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ [img=info]
 spidertron-enhancements-show-spider-on-vehicle=Show spidertron on top of vehicle after entering from a spidertron
 spidertron-enhancements-enter-player=Quick toggle spidertron with __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__
 spidertron-enhancements-auto-sort-inventory=Automatically sort spidertron inventories
-
-spidertron-enhancements-enable-corpse=Save spidertron inventory into corpse upon death
 
 spidertron-enhancements-enter-entity-base-game=Enter/exit vehicles from spidertron with standard control __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ [img=info]
 spidertron-enhancements-enter-entity-custom=Enter/exit vehicles from spidertron with custom control __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ [img=info]
 spidertron-enhancements-pipette-unconnected-remote=Spidertron pipette tool picks an unconnected remote if no connected remotes are found
 
 [mod-setting-description]
+spidertron-enhancements-sound-pause=Average number of seconds before a spidertron's sound starts playing again (sound plays for 19s).\n[color=green]Default = 0[/color]
+spidertron-enhancements-volume-scale=[color=green]Default = 1[/color]
+
 spidertron-enhancements-enter-entity=Configure controls in [font=default-bold]Per player[/font] settings tab.
 
 spidertron-enhancements-enter-entity-base-game=Overrides the default behaviour for __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ when riding a spidertron near a vehicle.\nDepends on "Enter/exit vehicles from spidertron" [font=default-bold]Map[/font] setting.
